--- a/15 - Adding Authentication/views/includes/add-to-cart.ejs
+++ b/15 - Adding Authentication/views/includes/add-to-cart.ejs
@@ -1,4 +1,5 @@
 <form action="/cart" method="post">
     <button type="submit" class="btn">Add to Cart</button>
+    <input type="hidden" name="_csrf" value="<%= csrfToken %>">
     <input type="hidden" name="productId" value="<%= product._id %>">
 </form>
